--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,17 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+
+header #api_status {
+    position: absolute;
+    align-items: right;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    margin-right: 30px;
+    background-color: #cccccc;
+}
+
+#api_status.available {
+    background-color: #ff545f;
+}
