--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -15,6 +15,7 @@
 <body>
 	<header>
 		<div class="logo"></div>
+		<div class="api_status"></div>
 	</header>
 	<div class="container">
 		<section class="filters">
