--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,4 +1,5 @@
 header {
+    display: flex;
     background: white;
     height: 70px;
     width: 100%;
@@ -8,11 +9,13 @@ header .logo {
     background: url("../images/logo.png") no-repeat;
     left: 20px;
     height: 100%;
+    width: 90%;
 }
 
 header #api_status {
+    margin-top: 15px;
     position: absolute;
-    align-items: right;
+    right: 0;
     border-radius: 50%;
     height: 40px;
     width: 40px;
